One HMM to rule them all